// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live validator snapshot validation should match all errors for no options 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.email",
        ],
        "message": "Missing required property: email",
        "params": Array [
          "email",
        ],
        "pathsInPayload": Array [
          "properties/email",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserCreateParameterProperties",
          "position": Object {
            "column": 38,
            "line": 696,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.lastName",
        ],
        "message": "Expected type string but found type integer",
        "params": Array [
          "string",
          "integer",
        ],
        "pathsInPayload": Array [
          "properties/lastName",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserContractProperties/properties/lastName",
          "position": Object {
            "column": 21,
            "line": 657,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      Object {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.state",
        ],
        "message": "Enum does not match case for: Active",
        "params": Array [
          "Active",
        ],
        "pathsInPayload": Array [
          "properties/state",
        ],
        "schemaPath": "",
        "severity": 1,
        "source": Object {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": Object {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.registrationDate",
        ],
        "message": "Object didn't pass validation for format date-time: 2018-09-11",
        "params": Array [
          "date-time",
          "2018-09-11",
        ],
        "pathsInPayload": Array [
          "properties/registrationDate",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserContractProperties/properties/registrationDate",
          "position": Object {
            "column": 29,
            "line": 665,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      Object {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": Array [
          "id",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/id",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should match for one of missing 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.options[0].restriction.audience",
        ],
        "message": "Missing required property: audience",
        "params": Array [
          "audience",
        ],
        "pathsInPayload": Array [
          "properties/options/0/restriction/audience",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ContentKeyPolicyTokenRestriction",
          "position": Object {
            "column": 41,
            "line": 446,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should report expected error with correct path information for secret property 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01-preview",
      "operationId": "VendorSkus_List",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "SECRET_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.value[0].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
          "$.value[1].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
          "$.value[2].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
        ],
        "message": "Secret property \`\\"sasUri\\"\`, cannot be sent in the response.",
        "params": Array [
          "sasUri",
          "",
        ],
        "pathsInPayload": Array [
          "value/0/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
          "value/1/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
          "value/2/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ImageReference/properties/sasUri",
          "position": Object {
            "column": 19,
            "line": 1412,
          },
          "url": "specification/hybridnetwork/resource-manager/2020-01-01-preview/vendor.json",
        },
      },
      Object {
        "code": "WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.value[0].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
          "$.value[1].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
          "$.value[2].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].imageReference.sasUri",
        ],
        "message": "Write-only property \`\\"sasUri\\"\`, is not allowed in the response.",
        "params": Array [
          "sasUri",
          "",
        ],
        "pathsInPayload": Array [
          "value/0/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
          "value/1/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
          "value/2/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/imageReference/sasUri",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ImageReference/properties/sasUri",
          "position": Object {
            "column": 19,
            "line": 1412,
          },
          "url": "specification/hybridnetwork/resource-manager/2020-01-01-preview/vendor.json",
        },
      },
      Object {
        "code": "SECRET_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.value[0].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
          "$.value[1].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
          "$.value[2].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
        ],
        "message": "Secret property \`\\"adminPassword\\"\`, cannot be sent in the response.",
        "params": Array [
          "adminPassword",
          "",
        ],
        "pathsInPayload": Array [
          "value/0/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
          "value/1/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
          "value/2/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/OsProfile/properties/adminPassword",
          "position": Object {
            "column": 26,
            "line": 1448,
          },
          "url": "specification/hybridnetwork/resource-manager/2020-01-01-preview/vendor.json",
        },
      },
      Object {
        "code": "WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.value[0].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
          "$.value[1].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
          "$.value[2].properties.virtualNetworkFunctionTemplate.virtualNetworkFunctionRoleConfigurations[0].osProfile.adminPassword",
        ],
        "message": "Write-only property \`\\"adminPassword\\"\`, is not allowed in the response.",
        "params": Array [
          "adminPassword",
          "",
        ],
        "pathsInPayload": Array [
          "value/0/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
          "value/1/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
          "value/2/properties/virtualNetworkFunctionTemplate/virtualNetworkFunctionRoleConfigurations/0/osProfile/adminPassword",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/OsProfile/properties/adminPassword",
          "position": Object {
            "column": 26,
            "line": 1448,
          },
          "url": "specification/hybridnetwork/resource-manager/2020-01-01-preview/vendor.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2020-01-01-preview",
      "operationId": "VendorSkus_List",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return expected error for readonly property in the request 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.readOnlyProperty",
        ],
        "message": "ReadOnly property \`\\"readOnlyProperty\\": \\"test\\"\`, cannot be sent in the request.",
        "params": Array [
          "readOnlyProperty",
          "test",
        ],
        "pathsInPayload": Array [
          "readOnlyProperty",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/User/properties/readOnlyProperty",
          "position": Object {
            "column": 29,
            "line": 101,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
      Object {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.name",
        ],
        "message": "ReadOnly property \`\\"name\\": \\"foo\\"\`, cannot be sent in the request.",
        "params": Array [
          "name",
          "foo",
        ],
        "pathsInPayload": Array [
          "name",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/User/properties/name",
          "position": Object {
            "column": 17,
            "line": 91,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input with optional parameter body empty 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input with optional parameter body null 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_CASE_MISMATCH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].type",
        ],
        "message": "Enum does not match case for: System",
        "params": Array [
          "System",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/type",
        ],
        "schemaPath": "",
        "severity": 1,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_MISMATCH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.state",
        ],
        "message": "No enum match for: dasda",
        "params": Array [
          "dasda",
        ],
        "pathsInPayload": Array [
          "properties/state",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": Object {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].type",
        ],
        "message": "No enum match for: banana",
        "params": Array [
          "banana",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/type",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_FORMAT 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.createdAtUtc",
        ],
        "message": "Object didn't pass validation for format date-time: 0001-01-01T00:00:00",
        "params": Array [
          "date-time",
          "0001-01-01T00:00:00",
        ],
        "pathsInPayload": Array [
          "properties/createdAtUtc",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/createdAtUtc",
          "position": Object {
            "column": 25,
            "line": 903,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_TYPE 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.hostnameConfigurations",
        ],
        "message": "Expected type array but found type string",
        "params": Array [
          "array",
          "string",
        ],
        "pathsInPayload": Array [
          "properties/hostnameConfigurations",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/hostnameConfigurations",
          "position": Object {
            "column": 35,
            "line": 934,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MAX_LENGTH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MAX_LENGTH",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.description",
        ],
        "message": "String is too long (1958 chars), maximum 1000",
        "params": Array [
          1958,
          1000,
        ],
        "pathsInPayload": Array [
          "properties/description",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/OperationEntityBaseContract/properties/description",
          "position": Object {
            "column": 24,
            "line": 4071,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MISSING_REQUIRED_PARAMETER 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MISSING_REQUIRED_PARAMETER",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [],
        "message": "Value is required but was not provided",
        "params": undefined,
        "pathsInPayload": Array [],
        "schemaPath": "#/paths/~1subscriptions~1{subscriptionId}~1resourceGroups~1{resourceGroupName}~1providers~1Microsoft.ApiManagement~1service~1{serviceName}~1users~1{uid}/put/parameters/3",
        "severity": 0,
        "source": Object {
          "jsonRef": "",
          "position": Object {
            "column": -1,
            "line": -1,
          },
          "url": undefined,
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_ADDITIONAL_PROPERTIES 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].id",
          "$.properties.groups[1].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": Array [
          "id",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/id",
          "properties/groups/1/id",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_MISSING_REQUIRED_PROPERTY 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].displayName",
        ],
        "message": "Missing required property: displayName",
        "params": Array [
          "displayName",
        ],
        "pathsInPayload": Array [
          "properties/groups/0/displayName",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for SECRET_PROPERTY 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "SECRET_PROPERTY",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.password",
        ],
        "message": "Secret property \`\\"password\\"\`, cannot be sent in the response.",
        "params": Array [
          "password",
          "",
        ],
        "pathsInPayload": Array [
          "properties/password",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/SecretUserContractProperties/properties/password",
          "position": Object {
            "column": 21,
            "line": 134,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusersecret.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE",
        "documentationUrl": "",
        "inner": undefined,
        "jsonPathsInPayload": Array [
          "$.properties.propertyUsage",
        ],
        "message": "Write-only property \`\\"propertyUsage\\"\`, is not allowed in the response.",
        "params": Array [
          "propertyUsage",
          "",
        ],
        "pathsInPayload": Array [
          "properties/propertyUsage",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/WriteOnlyPropertyContractProperties/properties/propertyUsage",
          "position": Object {
            "column": 26,
            "line": 142,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimwriteonly.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
}
`;
